--- a/Todo - FrontEnd/src/app/header/header.component.html
+++ b/Todo - FrontEnd/src/app/header/header.component.html
@@ -1,13 +1,20 @@
 <header>
-    <nav class = "navbar navbar-expand-md navbar-dark bg-dark">
-            <ul class = "navbar-nav">
-                <li><a href="/welcome/lakshmi" class = "nav-link"> Home </a></li>
-                <li><a href = "/listTodos"class = "nav-link"> Todos </a></li>
-            </ul>
-            <ul class = "navbar-nav navbar-collapse justify-content-end">
-                <li><a href="/login" class = "nav-link"> Login </a></li>
-                <li><a href = "/logout" class = "nav-link"> Logout </a></li>
-            </ul>
-        
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div>
+            <a href="https://www.in28minutes.com" class="navbar-brand">in28minutes</a>
+        </div>
+
+        <ul class="navbar-nav">
+            <li><a *ngIf="hardcodedauthService.isUserLoggedIn()" routerLink="/welcome/lakshmi" class="nav-link"> Home</a></li>
+            <li><a *ngIf="hardcodedauthService.isUserLoggedIn()" routerLink="/listTodos" class="nav-link"> Todos </a></li>
+        </ul>
+
+        <ul class="navbar-nav navbar-collapse justify-content-end">
+            <!-- href - reloads the entire page -->
+            <!-- routerLink - entire page will not get reloaded, specific content will be replaced-->
+            <li><a *ngIf="!hardcodedauthService.isUserLoggedIn()" routerLink="/login" class="nav-link"> Login </a></li>
+            <li><a *ngIf="hardcodedauthService.isUserLoggedIn()" routerLink="/logout" class="nav-link"> Logout </a></li>
+        </ul>
+
     </nav>
 </header>
