--- a/Todo - FrontEnd/src/app/list-todos-component/list-todos-component.component.html
+++ b/Todo - FrontEnd/src/app/list-todos-component/list-todos-component.component.html
@@ -1,8 +1,9 @@
-<table border = "1">
-    <caption> My Todo's </caption>
+<h1> My Todos </h1>
+<div class = "container">
+<table class ="table">
     <thead>
         <tr>
-            <th>S.NO </th>
+            <th>S.No </th>
             <th>Description</th>
             <th>Target Date</th>
             <th>Is Completed ?</th>
@@ -17,3 +18,4 @@
     </tr>
     </tbody>
 </table>
+</div>
