--- a/Todo - FrontEnd/src/app/login/login.component.html
+++ b/Todo - FrontEnd/src/app/login/login.component.html
@@ -1,14 +1,15 @@
 <h1> Login!! </h1>
 <div class="container">
-    <div class="alert alert-warning" *ngIf='invalidLogin'> {{errorMessage}}</div>
+    <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
 
     <div>
 
-        Username : <input type="text" name="UserName" [(ngModel)]="UserName">
-        Password : <input type="password" name="password" [(ngModel)]="password">
+        Username : <input type="text" name = "username" [(ngModel)] = "username">
+        Password : <input type="password" name = "password" [(ngModel)] = "password">
         &nbsp;&nbsp;
-        <button (click)=handleLogin() class="btn btn-success">Login</button>
-        
+        <!-- <button (click)=handleLogin() class="btn btn-success">Login</button> -->
+        <!-- <button (click) = "handleBasicAuthLogin()" class="btn btn-success">Login</button> -->
+        <button (click) = "handleJWTBasicAuthLogin()" class="btn btn-success">Login</button>
     </div>
 
 </div>
